# st_exp_protobuf

./: CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md
c++/: README.md
c++/common_typedefs/: CMakeLists.txt
c++/common_typedefs/include/common_typedefs/: common_typedefs.h
c++/create_st_exp_protobuf/: CMakeLists.txt  main.cc  parse_args.cc  parse_args.h  vips_tiles_container.cc
c++/crick_reader/: CMakeLists.txt  crick_reader.cc.cmake
c++/crick_reader/include/crick_reader/: crick_reader.h
c++/crick_reader_interface/: CMakeLists.txt
c++/crick_reader_interface/include/crick_reader_interface/: crick_reader_interface.h
c++/crickconvert/: CMakeLists.txt  main.cc  parse_args.cc  parse_args.h  tileconvert.cc  vips_tiles_container.h
c++/dataset_reader/: CMakeLists.txt  dataset_reader.cc
c++/dataset_reader/include/dataset_reader/: dataset_reader.h
c++/dzi_helper/: CMakeLists.txt  dzi_helper.cc
c++/dzi_helper/include/dzi_helper/: dzi_helper.h
c++/feature_datamodel/: CMakeLists.txt
c++/feature_datamodel/include/feature_datamodel/: datamodel.h
c++/file_format_container/: CMakeLists.txt  after_header_data.cc
c++/file_format_container/include/file_format_container/: after_header_data.h  byterange.h
c++/file_format_st_exp_protobuf/: CMakeLists.txt  file_format_st_exp_protobuf.cc
c++/file_format_st_exp_protobuf/include/file_format_st_exp_protobuf/: file_format_st_exp_protobuf.h
c++/parse_count_matrix/: CMakeLists.txt  parse_count_matrix.cc
c++/parse_count_matrix/include/parse_count_matrix/: parse_count_matrix.h
c++/parse_feature_json/: CMakeLists.txt  json_parse.cc
c++/parse_feature_json/cmake/: FindYajl.cmake
c++/parse_feature_json/include/parse_feature_json/: json_parse.h
c++/reorder_feature_datamodel/: CMakeLists.txt  reorder.cc
c++/reorder_feature_datamodel/include/reorder_feature_datamodel/: reorder.h
c++/serialize_to_st_exp_protobuf/: CMakeLists.txt  serialize_to_st_exp_protobuf.cc
c++/serialize_to_st_exp_protobuf/include/serialize_to_st_exp_protobuf/: serialize_to_st_exp_protobuf.h
c++/tiles_interface/: CMakeLists.txt
c++/tiles_interface/include/tiles_interface/: tiles_interface.h
c++/tiles_spec_interface/: CMakeLists.txt
c++/tiles_spec_interface/include/tiles_spec_interface/: tiles_spec_interface.h
c++/transform_point_with_alignment_matrix/: CMakeLists.txt  transform_point.cc
c++/transform_point_with_alignment_matrix/include/transform_point_with_alignment_matrix/: transform_point.h
c++/vips_tiles/: CMakeLists.txt  vips_tiles.cc
c++/vips_tiles/include/vips_tiles/: vips_tiles.h
javascript/: README.md  example.js  genehits_as_array.js
protobuf_schema/: CMakeLists.txt  fileformat_common.proto  st_exp.proto  tiled_image.proto
protobuf_schema/file_format_common_protobuf/: CMakeLists.txt
protobuf_schema/st_exp_protobuf/: CMakeLists.txt  fullsize_image.proto  st_exp.proto
python/: README.md
sh/: download_and_convert_example_data.sh
