cmake_minimum_required(VERSION 3.4 FATAL_ERROR)
add_subdirectory(protobuf_schema/file_format_common_protobuf)
add_subdirectory(protobuf_schema/st_exp_protobuf)
add_subdirectory(c++/common_typedefs)
add_subdirectory(c++/feature_datamodel)
add_subdirectory(c++/parse_feature_json)
add_subdirectory(c++/parse_count_matrix)
add_subdirectory(c++/reorder_feature_datamodel)
add_subdirectory(c++/dzi_helper)
add_subdirectory(c++/tiles_spec_interface)
add_subdirectory(c++/tiles_interface)
add_subdirectory(c++/vips_tiles)
add_subdirectory(c++/crick_reader_interface)
#add_subdirectory(c++/crick_reader)
add_subdirectory(c++/dataset_reader)
add_subdirectory(c++/transform_point_with_alignment_matrix)
add_subdirectory(c++/file_format_container)
add_subdirectory(c++/file_format_st_exp_protobuf)
add_subdirectory(c++/serialize_to_st_exp_protobuf)
#add_subdirectory(c++/crickconvert)
add_subdirectory(c++/create_st_exp_protobuf)


